# autogen-ecm-organoid-assistant

./: .env.example  .gitignore  README.md  desktop.spec  pyproject.toml
.github/workflows/: python-tests.yml
.streamlit/: config.toml
datasets/: manifest.json
datasets/hydrogel_characterization_data/normalized/: normalized_manifest.json
demo_assets/: sample_mechanics_creep.csv
docs/: febio_configuration.md  frontend_guide.md  simulation_workflow.md  troubleshooting.md
memory/: focus_questions.md  research_profile.md
scripts/: build_browser_launcher_app.sh  launch_browser_server.sh  run_protected_frontend.sh  run_protected_frontend_cloudflare.sh
src/ecm_organoid_agent/: __main__.py  artifacts.py  benchmarks.py  calibration.py  config.py  datasets.py  demo.py  desktop.py  fiber_network.py  formulation.py  frontend.py  mechanics.py  model_client.py  runner.py  tools.py  workspace.py
src/ecm_organoid_agent/febio/: __init__.py  builder.py  config.py  mapping.py  metrics.py  parser.py  runner.py  scenarios.py  schemas.py  templates.py
templates/: weekly_report_template.md
tests/: __init__.py  febio_test_support.py  test_artifacts.py  test_benchmarks.py  test_calibration.py  test_datasets.py  test_demo.py  test_febio.py  test_febio_builder.py  test_febio_metrics.py  test_febio_parser.py  test_febio_runner.py  test_febio_schemas.py  test_fiber_network.py  test_formulation.py  test_frontend_helpers.py  test_mechanics.py  test_runner.py  test_simulation_workflow.py  test_tools.py
(+17 files in other folders)
